# torch-spyre

./: pyproject.toml  setup.py
.claude/skills/project-overview/: SKILL.md
.github/scripts/: ingest_xml.py
.github/workflows/: linters.yaml  model_modules_tests.yaml  push-to-clickhouse.yaml  runtests.yaml  upstream_tests.yaml
codegen/inputs/: Metadata.yaml
codegen/templates/: base.jinja2
docs/: README.md
docs/source/api/: torch_spyre.rst
docs/source/compiler/: architecture.md  inductor_frontend.md  work_division_codegen.md  work_division_planning.md
docs/source/rfcs/: index.md
docs/source/runtime/: overview.md
docs/source/user_guide/: debugging.md  supported_operations.md  tensors_and_layouts.md
model_tests/model_centric_op_level_tests/: README.md
model_tests/model_centric_op_level_tests/ministral_3_14b_instruct_2512/: test_ministral_3_14b_instruct_2512.py  utils_ministral_3_14b_instruct_2512.py
requirements/: build.txt  dev.txt
tests/: oot_test_config_models.py  run_test.sh  spyre_test_base_common.py  spyre_test_config_models.py  spyre_test_constants.py  spyre_test_parsing.py  spyre_upstream_patcher.py  test_device_enum.py  test_ops.py  test_spyre.py
tests/configs/: example_test_config.yaml  test_profiler_config.yaml  test_suite_config.yaml
tests/configs/model_ops_tests/: granite-3.3-8b-instruct-with-device-layout.yaml  granite-3.3-8b-instruct_spyre.yaml
tests/configs/module_tests/: Ministral-3-14B-Instruct-2512.yaml  Mistral-Small-3.2-24B-Instruct-2506.yaml  granite_4_1_8b_spyre.yaml
tests/docs/: input_args_enablement.md  test_framework_instructions.md
tests/inductor/: test_cache.py  test_coarse_tiling.py  test_codegen.py  test_inductor_fx_passes.py  test_inductor_ops.py  test_padding.py  test_propagate_named_dims.py  test_restickify.py  utils_inductor.py
tests/model_tests/model_centric_op_level_tests/: README.md
tests/models/: model_cases_loader.py  op_registry.py  runner.py  test_model_ops.py  test_model_ops_v2.py
tests/module_discovery/: auto_generate_module_config.py
tests/oot_framework/: oot_test_config_models.py
tests/resource/models/: Ministral-3-14B-Instruct-2512.yaml  gpt-oss-20b.yaml  (+8 more)
tests/tensor/: test_coordinates.py  test_it_space_splits.py  test_tensor_layout.py
torch_spyre/: _C.pyi  __init__.py  _monkey_patch.py
torch_spyre/_inductor/: __init__.py  config.py  constants.py  core_division.py  customops.py  deadcode_elimination.py  decompositions.py  fusion.py  indirect_access.py  insert_restickify.py  lowering.py  padding.py  pass_utils.py  passes.py  patches.py  scratchpad.py  spyre_kernel.py  stickify.py  temp_passes.py  views.py
torch_spyre/csrc/: module.cpp  module.h  spyre_allocator.cpp  spyre_allocator.h  spyre_device_enum.cpp  spyre_device_enum.h  spyre_guard.cpp  spyre_hooks.cpp  spyre_mem.cpp  spyre_stream.cpp  spyre_stream.h  spyre_tensor_impl.cpp  spyre_tensor_impl.h  spyre_views.cpp  types_mapping.h
torch_spyre/execution/: async_compile.py  kernel_runner.py
torch_spyre/memory/: __init__.py
torch_spyre/ops/: eager.py  fallbacks.py
(+6 files in other folders)
