[build-system]
requires = [
    # any change here should be reflected in the build dependencies below
    "build",  # only required to build torch_sendnn
    "cmake>=3.27,<4.0.0",
    "expecttest>=0.3.0", # imported by torch.testing._internal.common_utils
    "jinja2",
    "ninja",
    "numpy",
    "pyyaml", # needed for codegen
    "regex",
    "setuptools>=70.1.0,<80.0",
    "torch~=2.10.0",
#    "torch>=2.10.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "torch_spyre"
authors = [
    {name = "Torch-Spyre Core Team"}
]
description = "Torch-Spyre out of tree registration"
dependencies = [
    "numpy",
    "regex",
    "torch~=2.10.0",
#    "torch>=2.10.0",
    "psutil~=7.2.1"
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
build = [ # no-isolation build 
    # any change here should be reflected in the build system above
    "build",  # only required to build torch_sendnn
    "cmake>=3.27,<4.0.0",
    "expecttest>=0.3.0", # imported by torch.testing._internal.common_utils
    "jinja2",
    "ninja",
    "numpy",
    "pyyaml", # needed for codegen
    "regex",
    "setuptools>=70.1.0,<80.0",
    "torch~=2.10.0",
#    "torch>=2.10.0",
    "wheel"
]
test = [
    "pytest~=9.0.0",
#    "torch_sendnn", # must be installed manually
    "transformers~=4.57.1"
]
lint = [
    "mypy~=1.13.0",
    "pre-commit~=4.5.0",
    "types-PyYAML~=6.0.12.20250915",
    "uv~=0.10.0",
]

[project.entry-points."torch.backends"]
torch_spyre = "torch_spyre:_autoload"

[tool.setuptools]
package-dir = { torch_spyre = "torch_spyre" }
package-data = { torch_spyre = ["*.dll", "*.dylib", "*.so"] }

[tool.setuptools.packages.find]
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = {attr = "torch_spyre.version.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
exclude=["tests/inductor"]

[[tool.mypy.overrides]]
module = ["torch_spyre._inductor.*"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
filterwarnings = [
    # PyTorch 2.10.0+: Suppress torch.jit.script_method DeprecationWarning triggered by
    # importing torch._inductor.compile_fx (which transitively imports torch.utils.mkldnn).
    # https://github.com/pytorch/pytorch/blob/v2.10.0/torch/jit/_script.py#L363
    "ignore::DeprecationWarning:torch.jit._script",
]
norecursedirs = ['tests/models']

[tool.uv]
required-version = ">=0.9.0"
index-strategy = "unsafe-best-match"
override-dependencies = ['setuptools>=70.1.0,<80.0']

[tool.uv.sources]
torch = [
#  { path = "../pytorch", editable = true },
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.pip]
universal = true
